Edit the urls in home page and fix the navbar in the base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'products:product-list' %}">Products</a></li>
-            <li><a href="{% url 'orders:order-list' %}">Orders</a></li>
+            <li><a href="#order">Order Detail</a></li>
             <li><a href="{% url 'wishlist:wishlist-list' %}">Wishlist</a></li>
             <!-- Add more navigation items based on your project's structure -->
         </ul>
