--- a/wishlist/templates/wishlist/wishlist_list.html
+++ b/wishlist/templates/wishlist/wishlist_list.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
-{% block title %}My Wishlists{% endblock %}
-
 {% block content %}
     <h2>My Wishlists</h2>
     <ul>
@@ -10,18 +8,21 @@
                 <a href="{% url 'wishlist:wishlist-detail' pk=wishlist.pk %}">{{ wishlist.name }}</a>
                 <ul>
                     {% for item in wishlist.wishlistitem_set.all %}
-                        <li>{{ item.product.name }} - {{ item.product.price }}</li>
+                        <li>
+                            {{ item.product.name }} - {{ item.product.price }}
+                            <!-- Link to view product details -->
+                            <a href="{% url 'products:product-detail' pk=item.product.pk %}">View Details</a>
+                            <!-- Link/button to add to cart -->
+                            <a href="{% url 'cart:add-to-cart' product_id=item.product.pk %}">Add to Cart</a>
+                            <!-- Link/button to remove from cart -->
+                            <a href="{% url 'cart:remove-from-cart' product_id=item.product.pk %}">Remove from Cart</a>
+                        </li>
                     {% endfor %}
                 </ul>
             </li>
         {% endfor %}
     </ul>
 
-    <!-- Display all products -->
-    <h2>All Products</h2>
-    <ul>
-        {% for product in all_products %}
-            <li>{{ product.name }} - {{ product.price }}</li>
-        {% endfor %}
-    </ul>
+    <!-- Link/button to navigate to the order page -->
+    <a href="{% url 'orders:make-order' %}">Make an Order</a>
 {% endblock %}
