Add navigation links to the base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,8 @@
             <li><a href="{% url 'products:product-list' %}">Products</a></li>
             <li><a href="#order">Order Detail</a></li>
             <li><a href="{% url 'wishlist:wishlist-list' %}">Wishlist</a></li>
-            <!-- Add more navigation items based on your project's structure -->
+            <li><a href="{% url 'bag:view-cart' %}">View Cart</a></li>
+            <li><a href="{% url 'bag:make-order' %}">Make an Order</a></li>
         </ul>
     </nav>
 
