Implement bootstrap and edit navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}Honey Shop{% endblock %}</title>
     <!-- Add your CSS styles or links to external stylesheets here -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 <body>
     
@@ -17,17 +18,16 @@
     </header>
 
     <!-- Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'products:product-list' %}">Products</a></li>
-            <li><a href="#order">Order Detail</a></li>
-            <li><a href="{% url 'wishlist:wishlist-list' %}">Wishlist</a></li>
-            <li><a href="{% url 'bag:view-cart' %}">View Cart</a></li>
-            <li><a href="{% url 'bag:make-order' %}">Make an Order</a></li>
-        </ul>
+    <nav class="navbar fixed-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+        <a class="navbar-brand" href="{% url 'products:product-list' %}">Products</a>
+        <a class="navbar-brand" href="#order">Order Detail</a>
+        <a class="navbar-brand" href="{% url 'wishlist:wishlist-list' %}">Wishlist</a>
+        <a class="navbar-brand" href="{% url 'bag:view-cart' %}">View Cart</a>
+        <a class="navbar-brand" href="{% url 'bag:make-order' %}">Make an Order</a>
     </nav>
 
+    
     <!-- Main Content Section -->
     <main>
         {% block content %}{% endblock %}
@@ -38,7 +38,9 @@
         
     </footer>
 
-    
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
 </body>
 </html>
