--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,6 +1,7 @@
 <!-- home/templates/home/home.html -->
-
 {% extends 'base.html' %}
+
+{% load static %}
 
 {% block content %}
 <div class="container">
