Edit home template

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,11 +1,6 @@
-<!-- home/templates/home/home.html -->
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <h1>Welcome to My E-commerce Website!</h1>
-    <!-- Add more content as needed -->
-</div>
+    <h1 class="display-4 text-success">It works!</h1>
 {% endblock %}
