--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -29,5 +29,11 @@
                 Special Offers
             </a>
         </li>
+
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'view_wishlist' %}" role="button">
+                Wish List
+            </a>
+        </li>
     </ul>
 </div>
