--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,12 +16,12 @@
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if product.image %}
-                        <a href="{{ product.image.url }}" target="_blank">
+                        <a href="{{ product.image.url }}" target="_blank" aria-label="product-image">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
                         {% else %}
                         <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} aria-label="product-image"">
                         </a>
                     {% endif %}
                 </div>
@@ -98,6 +98,12 @@
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
+                        </div>
+                    </form>
+                    <form class="form" action="{% url 'add_to_wishlist' product.id %}" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="col-12 mt-2">
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Wishlist">
                         </div>
                     </form>
                 </div>
