--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -5,7 +5,7 @@
     <ul>
         {% for product in products %}
         <li>
-            <img src="{{ product.image.url }}" alt="{{ product.name }}" width="100">
+            <img src="{{ product.image.url }}" alt="{{ product.name }}" width="100" aria-label="product-image">
             <h3>{{ product.name }}</h3>
             <p>Price: ${{ product.price }}</p>
             <!-- Add more information as needed -->
