--- a/newsletter/templates/newsletter/subscribe.html
+++ b/newsletter/templates/newsletter/subscribe.html
@@ -1,10 +1,16 @@
-
+{% extends 'base.html' %}
 
 {% block content %}
-    <h2>Subscribe to Newsletter</h2>
-    <form method="post" action="{% url 'subscribe' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Subscribe</button>
-    </form>
+    <div class="container mt-5 pt-5 d-flex align-items-center min-vh-100">
+        <div class="row justify-content-center">
+            <div class="col-md-6 mx-auto ml-3 text-center">
+                <h2>Subscribe to our Newsletter</h2>
+                <form method="post" action="{% url 'subscribe' %}" class="mt-3">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-primary btn-block mt-3">Subscribe</button>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
