--- a/newsletter/templates/newsletter/success_page.html
+++ b/newsletter/templates/newsletter/success_page.html
@@ -1,6 +1,12 @@
-
+{% extends "base.html" %}
 
 {% block content %}
-    <h2>Thank you for subscribing!</h2>
-    <p>You will receive our newsletter shortly.</p>
+    <div class="container mt-5 pt-5 d-flex align-items-center min-vh-100">
+        <div class="row justify-content-center">
+            <div class="col-md-6 mx-auto ml-3 text-center">
+                <h2 class="mt-5">Thank you for subscribing!</h2>
+                <p>You will receive our newsletter shortly.</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
