Add special offers products and edit the special offers link in navbar

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -25,7 +25,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" role="button">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'products:products' %}?category=special_offers"" role="button">
                 Special Offers
             </a>
         </li>
