Style password reset template

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -4,27 +4,117 @@
     {% trans "Password Reset" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    <p>
-        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    </p>
-    {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+<style>
+    body {
+        font-family: 'Arial', sans-serif;
+        background-color: #f4f4f4;
+    }
+
+    .container {
+        background-color: #ffffff;
+        padding: 80px 20px;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+        text-align: center;
+        color: #333333;
+    }
+
+    p {
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    form {
+        margin-top: 40px;
+    }
+
+    .form-group {
+        margin-bottom: 15px;
+    }
+
+    label {
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
+        color: #333333;
+    }
+
+    input {
+        width: 98%;
+        padding: 8px;
+        font-size: 16px;
+        border: 1px solid #cccccc;
+        border-radius: 4px;
+    }
+
+    button {
+        width: 50%;
+        margin-left: 25%;
+        padding: 10px;
+        font-size: 16px;
+        color: #ffffff;
+        background-color: black;
+        border: 1px solid black;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #0056b3;
+        border-color: #0056b3;
+    }
+
+    .btn-back-home {
+        width: 100%;
+        padding: 10px;
+        font-size: 16px;
+        border-radius: 4px;
+        color: #ffffff;
+        background-color: black;
+        border: 1px solid black;
+        border-radius: 4px;
+        cursor: pointer;
+        margin-top: 10px;
+        margin-right: 10px;
+        text-decoration: none;
+        display: block; 
+        text-align: center;
+        line-height: 40px;
+    }
+
+    .btn-back-home:hover {
+        background-color: #0056b3;
+        border-color: #0056b3;
+    }
+
+
+</style>
+
+{% element h1 %}
+    {% trans "Password Reset" %}
+{% endelement %}
+{% if user.is_authenticated %}
+    {% include "account/snippets/already_logged_in.html" %}
+{% endif %}
+<p>
+    {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
+</p>
+{% url 'account_reset_password' as reset_url %}
+{% element form form=form method="post" action=reset_url %}
+    {% slot body %}
+        {% csrf_token %}
+        {% element fields form=form %}
+        {% endelement %}
+    {% endslot %}
+    {% slot actions %}
+        {% element button type="submit" %}
+            {% trans 'Reset My Password' %}
+        {% endelement %}
+    {% endslot %}
+{% endelement %}
+<a href="{% url 'home' %}" class="btn btn-back-home">Back to Home Page</a>
+<p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock content %}
